(library
  (name lwd)
  (public_name lwd)
  (modules lwd lwd_table lwd_utils LwdShimsMkLet_)
  (libraries seq)
  (wrapped false))

(executable
 (name mkshims)
 (modules mkshims)
 (libraries dune.configurator))

(rule
 (targets LwdShimsMkLet_.ml)
 (deps ./mkshims.exe)
 (action
  (run ./mkshims.exe)))
